<resources>
    <string name="app_name">CloneUI</string>
    <string name="compose_text">Compose</string>
    <string name="title_mail">Mail</string>
    <string name="title_meet">Meet</string>
    <string name="menu_all">All inboxes</string>
    <string name="menu_primary">Primary</string>
    <string name="menu_social">Social</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_snoozed">Snoozed</string>
    <string name="menu_important">Important</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_scheduled">Scheduled</string>
    <string name="menu_outbox">Outbox</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_promotions">Promotions</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="search_email">Search in mail</string>
    <string name="gmail_text_logo">Gmail</string>
    <string name="subtitle_all_labels">ALL LABELS</string>
    <string name="subtitle_google_apps">GOOGLE APPS</string>
    <string name="mail_sender_username">(User Name)</string>
    <string name="mail_subject">(Subject)</string>
    <string name="mail_body">(Body)</string>
    <string name="profile_nopic_init_d">D</string>
    <string name="primary_mail_category">PRIMARY</string>
    <string name="sample_time">Jan 1</string>
</resources>